# bns

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.yaml  docker-compose.yml
src/: cache.rs  config.rs  dns.rs  inflight.rs  main.rs  rules.rs  shutdown.rs  store.rs  web.rs
web/: app.js  index.html  logs.html  rules.html  stats.html  style.css
